# xmobar-cajun

./: cabal.project  flake.nix  readme.md  xmobar-cajun.cabal
icons/: gen-load-icons.sh
icons/light/: load_0.xpm  load_1.xpm  load_2.xpm  load_3.xpm  load_4.xpm  load_5.xpm  load_6.xpm  load_7.xpm  load_8.xpm
lib/: Attic.hs  Bottom.hs  Config.hs  Monitors.hs  Music.hs
src/: Emacs.hs  Single.hs  Sway.hs  Test.hs  Top.hs
